Corrected some mistakes related to the images

--- a/pages/publication_history.html
+++ b/pages/publication_history.html
@@ -29,16 +29,24 @@
     <h1>Harry Potter</h1>
   </header>
   <div id="container">
-    <main class="main_content">
       <h2>Publication history</h2>
-      <div class="img1" <figure>
-        <img src="../img/J_K_R.jpg" alt="J._K._Rowling">
-        <figcaption>
-          The novelist, J. K. Rowling
-        </figcaption>
-        </figure>
+      <div class="publication_images">
+          <div class="img1"><figure>
+            <img src="../img/J_K_R.jpg" alt="J._K._Rowling">
+            <figcaption>
+              The novelist, J. K. Rowling
+            </figcaption>
+            </figure>
+          </div>
+          <div class="img2"><figure>
+            <img src="../img/HP_brit_watermark.png" alt="Harry_Potter_Britain_watermark">
+            <figcaption>
+              The logo used in British, Australian, and Canadian editions before 2010, which uses the typeface Cochin Bold.
+            </figcaption>
+            </figure>
+          </div>
       </div>
-
+    <main class="main_content">
       <p>
         After eight other publishers had rejected Philosopher's Stone, Bloomsbury offered Rowling a £2,500 advance for its publication.[58][59] Despite Rowling's statement that she did not have any particular age group in mind when beginning to write
         the Harry Potter books, the publishers initially targeted children aged nine to eleven.[60] On the eve of publishing, Rowling was asked by her publishers to adopt a more gender-neutral pen name in order to appeal to the male members of this
@@ -50,13 +58,13 @@
         publisher of the books – as Harry Potter and the Sorcerer's Stone,[63] after Rowling had received US$105,000 for the American rights – a record amount for a children's book by an unknown author.[64] Fearing that American readers would not
         associate the word "philosopher" with magic (although the Philosopher's Stone is an ancient tradition in alchemy), Scholastic insisted that the book be given the title Harry Potter and the Sorcerer's Stone for the American market.
       </p>
-      <div class="img2 " <figure>
+      <!-- <div class="img2"><figure>
         <img src="../img/HP_brit_watermark.png" alt="Harry_Potter_Britain_watermark">
         <figcaption>
           The logo used in British, Australian, and Canadian editions before 2010, which uses the typeface Cochin Bold.
         </figcaption>
         </figure>
-      </div>
+      </div> -->
       <p>
         The second book, Harry Potter and the Chamber of Secrets, was originally published in the UK on 2 July 1998 and in the US on 2 June 1999. Harry Potter and the Prisoner of Azkaban was published a year later in the UK on 8 July 1999 and in the
         US on 8 September 1999.[66] Harry Potter and the Goblet of Fire was published on 8 July 2000 at the same time by Bloomsbury and Scholastic.[67] Harry Potter and the Order of the Phoenix is the longest book in the series, at 766 pages in the
